force-app/main/default/objects/ssot__EducationalInfoRequest__dlm/fields/ssot__AcademicDurationObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__AcademicDurationObject__c</fullName>
    <label>Academic Duration Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AcademicDurationObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>