force-app/main/default/objects/ssot__EducationalInfoRequest__dlm/fields/ssot__Learning__c.field-meta.xml
<CustomField>
    <fullName>ssot__Learning__c</fullName>
    <label>Learning</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Learning</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>