force-app/main/default/objects/ssot__EducationalInfoRequest__dlm/fields/ssot__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ssot__Opportunity__c</fullName>
    <label>Opportunity</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Opportunity</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>