force-app/main/default/objects/ssot__EducationalInfoRequest__dlm/fields/ssot__rel_1719817652506_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817652506_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EducationalInfoRequest_AcademicDurat_rel</label>
    <referenceTo>ssot__AcademicTerm__dlm</referenceTo>
    <relationshipLabel>EducationalInfoRequest_AcademicDurat_rel</relationshipLabel>
    <relationshipName>rel_1719817652506_end</relationshipName>
    <type>Lookup</type>
</CustomField>