force-app/main/default/objects/ssot__EducationalInfoRequest__dlm/fields/ssot__rel_1719817771525_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719817771525_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EducationalInfoRequest_RequesterId_m_rel</label>
    <referenceTo>ssot__AccountContact__dlm</referenceTo>
    <relationshipLabel>EducationalInfoRequest_RequesterId_m_rel</relationshipLabel>
    <relationshipName>rel_1719817771525_end</relationshipName>
    <type>Lookup</type>
</CustomField>