force-app/main/default/objects/ssot__EducationalInfoRequest__dlm/fields/ssot__SubCategory__c.field-meta.xml
<CustomField>
    <fullName>ssot__SubCategory__c</fullName>
    <label>Subcategory</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SubCategory</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>